# FixoraMobile

./: .env.example  .gitignore  App.tsx  README.md  app.json  env.d.ts  index.js  package-lock.json  package.json  postinstall.js
android/: build_output.txt  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/fixoramobile/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/res/values/: strings.xml
docs/: android-build-setup.md
ios/: Podfile
ios/FixoraMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/FixoraMobile.xcodeproj/: project.pbxproj
ios/FixoraMobile.xcodeproj/xcshareddata/xcschemes/: FixoraMobile.xcscheme
patches/: react-native-screens+4.24.0.patch
src/config/: env.ts
src/navigation/: AppNavigator.tsx
src/screens/: AddServiceScreen.tsx  AppointmentScreen.tsx  EditProfileScreen.tsx  EditServiceScreen.tsx  ForgotPasswordScreen.tsx  HomeScreen.tsx  JobDetailsScreen.tsx  JobsScreen.tsx  LeavesScreen.tsx  LoginScreen.tsx  PaymentScreen.tsx  PaymentsListScreen.tsx  RegisterScreen.tsx  ServiceBookingScreen.tsx  ServicesScreen.tsx  SupportScreen.tsx  TechnicianAvailabilityScreen.tsx
src/services/: api.ts  appointmentService.ts  authService.ts  feedbackService.ts  jobService.ts  leaveService.ts  paymentService.ts  serviceService.ts  supportService.ts
src/types/: index.ts
